fix overflow chrome

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -10,7 +10,8 @@
   }
 
   &-about {
-    overflow-x: clip;
+    // overflow-x: clip;
+    content: contain;
     background-color: $color-light;
 
     @media (prefers-color-scheme: dark) {
